# node2vec

./: .gitignore  CMakeLists.txt  README.md  graph.cpp  graph.hpp  main.cpp  pyproject.toml  skipGram.cpp
bindings/: pybind_module.cpp
include/: graph.hpp  skipGram.hpp
models/: modelo1
outputs/embeddings/: embeddings_europa.csv  europe_embeddings
predictor/: load_model.py  predictor.ipynb  predictor.py  proteins.py
python/: main.py  pca.py
src/: main.cpp
typings/: node2vec_cpp.pyi
