[project]
name = "graph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    
    "pybind11>=3.0.2",
    "pybind11-stubgen>=2.5.5",
]
[project.optional-dependencies]
ML = [
    "matplotlib>=3.10.8",
    "scikit-learn>=1.8.0",
    "pandas>=3.0.1",  
]