[project]
name = "graph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "pybind11>=3.0.2",
    "pybind11-stubgen>=2.5.5",
    "pyqt6>=6.10.2",
]
[project.optional-dependencies]
ML = [
    "matplotlib>=3.10.8",
    "scikit-learn>=1.8.0",
    "pandas>=3.0.1",  
    "tensorflow[and-cuda]>=2.20.0",
]
